# LearnMatlabCodeGeneration

./: README.MD
matlabCodeGeneration/: madd.m  test1.prj
matlabCodeGeneration/codegen/lib/madd/: buildInfo.mat  codeInfo.mat  madd.c  madd.h  madd_initialize.c  madd_initialize.h  madd_rtw.mk  madd_terminate.c  madd_terminate.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
matlabCodeGeneration/codegen/lib/madd/html/: coder_report.mat  index.html  inference.mat  madd_buildlog1.html  madd_c.html  madd_h.html  madd_initialize_c.html  madd_initialize_h.html  madd_terminate_c.html  madd_terminate_h.html  madd_types_h.html  metrics.html  rtGetInf_c.html  rtGetInf_h.html  rtGetNaN_c.html  rtGetNaN_h.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html
matlabCodeGeneration/codegen/lib/madd/interface/: _coder_madd_api.c  _coder_madd_api.h  _coder_madd_info.c  _coder_madd_info.h
matlabCodeGeneration/libmatlab/: CMakeLists.txt  func.c  func.h
matlabCodeGeneration/libmatlab/include/: madd_types.h
matlabCodeGeneration/libmatlab/test/: CMakeLists.txt  main.c
matlabCodeGeneration1/: test2.prj
matlabCodeGeneration1/codegen/lib/madd/: buildInfo.mat  codeInfo.mat  madd.c  madd.h  madd_initialize.c  madd_initialize.h  madd_rtw.mk  madd_terminate.c  madd_terminate.h  madd_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
matlabCodeGeneration1/codegen/lib/madd/html/: coder_report.mat  index.html  (+19 more)
matlabCodeGeneration1/testCodegen/: CMakeLists.txt  main.c
(+5 files in other folders)
