CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (LibMatlab)

SET(ROOT_DIR ./../codegen/lib/madd/)

SET(HEADER_FILES 
	${ROOT_DIR}/madd.h
	${ROOT_DIR}/madd_types.h
	${ROOT_DIR}/rtwtypes.h
	func.h
)

SET(SOURCE_FILES
	${ROOT_DIR}/madd.c
	func.c
)

ADD_LIBRARY (matlab STATIC ${HEADER_FILES} ${SOURCE_FILES})


SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/)
INSTALL(TARGETS matlab ARCHIVE DESTINATION lib)
INSTALL(FILES ${HEADER_FILES} DESTINATION include)